infra/k8s/ingress-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: ingress-service
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
    rules:
        -   host: ticketing.dev
            http:
                paths:
                    -   path: /api/users/?(.*)
                        backend:
                            serviceName: auth-srv
                            servicePort: 3000
                    -   path: /?(.*)
                        backend:
                            serviceName: client-srv
                            servicePort: 3000
